# serializer version: 1
# name: test_switches[switch.roborock_s7_2_do_not_disturb-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.roborock_s7_2_do_not_disturb',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Do not disturb',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Do not disturb',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dnd_switch',
    'unique_id': 'dnd_switch_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.roborock_s7_2_do_not_disturb-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Do not disturb',
    }),
    'context': <ANY>,
    'entity_id': 'switch.roborock_s7_2_do_not_disturb',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.roborock_s7_2_dock_child_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.roborock_s7_2_dock_child_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Child lock',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Child lock',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'child_lock',
    'unique_id': 'child_lock_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.roborock_s7_2_dock_child_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Dock Child lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.roborock_s7_2_dock_child_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.roborock_s7_2_dock_status_indicator_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.roborock_s7_2_dock_status_indicator_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status indicator light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Status indicator light',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status_indicator',
    'unique_id': 'status_indicator_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.roborock_s7_2_dock_status_indicator_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Dock Status indicator light',
    }),
    'context': <ANY>,
    'entity_id': 'switch.roborock_s7_2_dock_status_indicator_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.roborock_s7_2_off_peak_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.roborock_s7_2_off_peak_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Off-peak charging',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Off-peak charging',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'off_peak_switch',
    'unique_id': 'off_peak_switch_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.roborock_s7_2_off_peak_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Off-peak charging',
    }),
    'context': <ANY>,
    'entity_id': 'switch.roborock_s7_2_off_peak_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.roborock_s7_maxv_do_not_disturb-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.roborock_s7_maxv_do_not_disturb',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Do not disturb',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Do not disturb',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dnd_switch',
    'unique_id': 'dnd_switch_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.roborock_s7_maxv_do_not_disturb-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Do not disturb',
    }),
    'context': <ANY>,
    'entity_id': 'switch.roborock_s7_maxv_do_not_disturb',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.roborock_s7_maxv_dock_child_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.roborock_s7_maxv_dock_child_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Child lock',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Child lock',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'child_lock',
    'unique_id': 'child_lock_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.roborock_s7_maxv_dock_child_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Dock Child lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.roborock_s7_maxv_dock_child_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.roborock_s7_maxv_dock_status_indicator_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.roborock_s7_maxv_dock_status_indicator_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status indicator light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Status indicator light',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status_indicator',
    'unique_id': 'status_indicator_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.roborock_s7_maxv_dock_status_indicator_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Dock Status indicator light',
    }),
    'context': <ANY>,
    'entity_id': 'switch.roborock_s7_maxv_dock_status_indicator_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.roborock_s7_maxv_off_peak_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.roborock_s7_maxv_off_peak_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Off-peak charging',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Off-peak charging',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'off_peak_switch',
    'unique_id': 'off_peak_switch_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.roborock_s7_maxv_off_peak_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Off-peak charging',
    }),
    'context': <ANY>,
    'entity_id': 'switch.roborock_s7_maxv_off_peak_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.zeo_one_sound_setting-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.zeo_one_sound_setting',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sound setting',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sound setting',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sound_setting',
    'unique_id': 'sound_setting_zeo_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.zeo_one_sound_setting-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Zeo One Sound setting',
    }),
    'context': <ANY>,
    'entity_id': 'switch.zeo_one_sound_setting',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
